[metadata]
name = cds_testing
version = 0.0.1
author = David Liu
author_email = david@cs.toronto.edu
description = Automated testing utilities for computation and data science courses.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UofTCompDSci/cds-testing
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    notebook_helper @ git+https://github.com/MarkUsProject/autotest-helpers.git#subdirectory=notebook_helper
